--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: make version
       run: |
+        export CI_BRANCH=${GITHUB_REF#refs/heads/}
         make version .env.docker
     - run: make ci-report
     - run: make build-docker-image
