--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,16 +3,16 @@ name: CI
 on:
   pull_request:
     branches:
-      - '*'
+      - "*"
   push:
     branches:
-      - 'master'
-      - 'release'
+      - "master"
+      - "release"
 
 jobs:
   build:
     name: build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: true
     env:
@@ -20,25 +20,25 @@ jobs:
       PACKAGECLOUD_TOKEN: ${{ secrets.PACKAGECLOUD_TOKEN }}
 
     steps:
-    - uses: actions/checkout@v4
-    - name: make version
-      run: |
-        export CI_BRANCH=${GITHUB_REF#refs/heads/}
-        make version .env.docker
-    - run: make ci-report
-    - run: make build-docker-image
-    - run: make build-in-docker
-    - run: make validate-in-docker
-    - name: upload packages
-      uses: actions/upload-artifact@v4
-      with:
-        name: build
-        path: build/**/*
-    - name: make release-in-docker
-      run: |
-        if [[ "${GITHUB_REF#refs/heads/}" == "release" ]]; then
+      - uses: actions/checkout@v4
+      - name: make version
+        run: |
           export CI_BRANCH=${GITHUB_REF#refs/heads/}
-          export PACKAGECLOUD_REPOSITORY=josegonzalez/packages
-          rm .env.docker
-          make .env.docker release-in-docker release-packagecloud-in-docker
-        fi
+          make version .env.docker
+      - run: make ci-report
+      - run: make build-docker-image
+      - run: make build-in-docker
+      - run: make validate-in-docker
+      - name: upload packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: build
+          path: build/**/*
+      - name: make release-in-docker
+        run: |
+          if [[ "${GITHUB_REF#refs/heads/}" == "release" ]]; then
+            export CI_BRANCH=${GITHUB_REF#refs/heads/}
+            export PACKAGECLOUD_REPOSITORY=josegonzalez/packages
+            rm .env.docker
+            make .env.docker release-in-docker release-packagecloud-in-docker
+          fi
